--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv-cli": "^7.0.0",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-tailwindcss": "^3.8.2",
@@ -31,7 +32,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "engines": {
     "node": ">=16.8.0"
