--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src",
-    "prettier": "prettier --write src"
+    "prettier": "prettier --write src",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-beta.34",
+    "@storybook/addon-interactions": "^7.0.0-beta.34",
+    "@storybook/addon-links": "^7.0.0-beta.34",
+    "@storybook/blocks": "^7.0.0-beta.34",
+    "@storybook/react": "^7.0.0-beta.34",
+    "@storybook/react-vite": "^7.0.0-beta.34",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
@@ -26,10 +35,13 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-tailwindcss": "^3.8.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.0-beta.34",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
