--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-tailwindcss": "^3.8.2",
+    "msw": "^1.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
@@ -46,6 +47,9 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   },
   "engines": {
     "node": ">=16.8.0"
