--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     }
   },
   "include": ["src", "**/*.d.ts"],
+  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
